--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.0.2",
     "reactjs-stylesheet": "^1.0.9",
     "ts-node": "^10.8.1",
+    "typescript": "^5.1.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -44,7 +45,6 @@
     "eslint-config-next": "^13.4.5",
     "eslint-plugin-storybook": "^0.6.0",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.7.4"
+    "tailwindcss": "^3.0.24"
   }
 }
