--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "reactjs-stylesheet": "^1.0.9",
     "ts-node": "^10.8.1",
     "typescript": "^5.1.3",
+    "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
   "devDependencies": {
